--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ commands =
 
 deps =
     jinja2>=2.11
-    requests
+    requests>=2.22.0
     pytest
     pytest-testdox
     pytest-pudb
@@ -20,6 +20,6 @@ deps =
 [testenv:lint]
 deps =
     jinja2>=2.11
-    requests
+    requests>=2.22.0
     flake8
 commands = flake8 zipreport/
